# SLAM_Mobile-Robot

./: README.md  index.md
src/ball_recognition/: CMakeLists.txt  package.xml
src/ball_recognition/src/: ball_recognition.cpp  ball_tracking.cpp
src/image_recognition/: CMakeLists.txt  _cproject.xml  _project.xml  package.xml
src/image_recognition/msg/: StringPointStamped.msg
src/image_recognition/src/: image_converter.cpp  marker_setter_laser.cpp  marker_setter_map.cpp
src/keyboard_vel/: CMakeLists.txt  package.xml
src/keyboard_vel/src/: keyboard_vel.py
src/opencv_apps/: CMakeLists.txt
src/opencv_apps/launch/: face_detection.launch  face_recognition.launch
src/project_launch/: project_all.launch  project_ball.launch
src/slam_gmapping/gmapping/launch/: slam_gmapping_pr2.launch
src/slam_gmapping/gmapping/src/: slam_gmapping.cpp
src/vrep_ros_interface/: CMakeLists.txt
src/vrep_ros_interface/include/: vrep_ros_interface.h
src/vrep_ros_interface/launch/: vrep.launch
src/vrep_ros_interface/src/: stubs.cpp
src/vrep_ros_interface/tools/: generate_ros_stuff.py
